[package]
name = "powerlog"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json", "brotli", "gzip", "deflate", "native-tls-vendored" ] }
tokio = { version = "1.37.0", features = ["full"] }
const_format = "0.2.32"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
thiserror = "1.0.58"
serde_json = "1.0.115"
env_logger = "0.11.3"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
time = { version = "0.3.36", features = ["std", "serde"] }
sun = "0.2.0"
axum = { version = "0.7.5", features = ["http2"] }
axum-streams = { version = "0.14.2", features = ["json"] }
futures = "0.3.30"
aliasable = "0.1.3"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
